--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
 
           <div class="btnRow">
             <button class="btn secondary" id="openAppBtn">↗ Open App</button>
-            <a class="btn primary" id="downloadBtn" href="/downloads/ebantay-latest.apk" download>⬇ Download APK</a>
+            <a class="btn primary" id="downloadBtn" href="/downloads/ebantay-latest.apk" download>⬇ Download & Install</a>
             <button class="btn ghost" id="howBtn">ℹ How to install</button>
           </div>
 
